# firmos

./: .gitignore  ARCHITECTURE_AND_FUNCTIONAL_AUDIT.md  END_TO_END_REGISTER_AUTOMATION_PLAN.md  FEATURE_GUIDE.md  PRODUCTION_AUTOMATION_RESEARCH.md  PRODUCTION_RUNBOOK.md  REDESIGN_PLAN.md  comprehensive_audit_report.md  design-sample-v6.html  render.yaml
apps/firmos-agent/src-tauri/: Cargo.toml  tauri.conf.json
firmos-backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
firmos-backend/api/: deps.py  main.py
firmos-backend/api/routes/: agent_bank_tools.py  agent_tools.py  audit.py  bank_reconciliation.py  bank_statement_parsing.py  (+37 more)
firmos-backend/automation/: __init__.py  scheduler.py  service.py  worker.py
firmos-backend/connectors/: accounting.py  base.py
firmos-backend/core/: agent_experience.py  config.py  database.py  device_signing.py  email.py  errors.py  feature_flags.py  hardening.py  idempotency.py  itr_drafting.py  logging.py  money.py  private_storage.py  redaction.py  security.py
firmos-backend/engines/: bank_matcher.py  bank_registry.py  bank_types.py  gst.py  gst_components.py  gstr2b_matcher.py  gstr2b_parser.py  gstr2b_types.py  income_tax_rules.py  interest.py  reconcile.py  tax.py  tds.py
firmos-backend/extraction/: base.py  gemini.py  result.py  sarvam.py  sarvam_bank.py  shared.py
firmos-backend/models/: schemas.py
firmos-backend/scripts/: check_openapi_contract.py  check_rls.py  clear_zoho.py  probe_zoho_sales_read.py  scratch.py  scratch2.py  wipe_zoho.py
firmos-backend/tests/: conftest.py  test_agent_experience.py  test_capabilities.py  test_connector_truthfulness.py  test_device_signing.py  test_document_safety.py  test_engines.py  test_extraction.py  test_filing_safety.py  test_finance_action_engine.py  test_firms.py  test_foundation.py  test_gst_components.py  test_gstr2b_parser.py  test_hardening.py  test_phase12_gstr2b_ims.py  test_phase13_bank_reconciliation.py  test_phase14_16_workflows.py  test_provider_write_boundary.py  test_purchase_invoice_phase10.py  test_readiness.py  test_register_projections.py  test_routes.py  test_routes_auth.py  test_statutory_regressions.py  test_tally_agent_v1.py  test_tally_bridge.py  test_tally_bridge_actions.py  test_tally_bridge_xml.py  test_tally_cloud.py  test_tally_write_engine.py  test_trust_spine.py  test_wb_oauth.py  test_whitebooks.py  test_workflows.py  test_ws1_engines.py  test_ws2_gstr3b.py  test_ws3_bank.py  test_ws4_decisions.py  test_ws5_classification.py  (+6 more)
firmos-backend/workflows/: graphs.py  state.py  t1_vendor_bill.py  t2_reconciliation.py  t3_gstr2b.py  t4_manual_filing.py  t5_itr.py
(+307 files in other folders)
