[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "core*", "models*", "engines*", "workflows*", "connectors*", "extraction*"]

[project]
name = "firmos-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "cryptography>=48.0.1,<49",
    "python-jose[cryptography]>=3.3,<4",
    "langgraph>=1.2.9,<2",
    "langgraph-checkpoint>=4.1.1,<5",
    "langgraph-checkpoint-postgres>=3.1,<4",
    "redis>=5,<6",
    "structlog>=24,<25",
    "sentry-sdk[fastapi]>=2,<3",
    "rapidfuzz>=3,<4",
    "pandas>=2.2,<3",
    "google-cloud-aiplatform>=1.70,<2",
    "python-multipart>=0.0.9,<1",
    "pillow>=10.4,<13",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: isolated deterministic test",
    "integration: test requiring application or database integration",
    "provider_sandbox: test against a provider sandbox",
    "e2e: end-to-end product test",
    "live: test requiring real credentials or infrastructure",
]
